@@ -41,7 +41,7 @@ class CTimer;
 //******************************************************************************************************************************
 //******************************************************************************************************************************
 
-#define NUMBER_OF_KEYBOARD_CONFIGURATIONS     2   //!< Number of keyboard configurations to allow
+#define NUMBER_OF_KEYBOARD_CONFIGURATIONS     5   //!< Number of keyboard configurations to allow
 
 //******************************************************************************************************************************
 //******************************************************************************************************************************
