@@ -56,11 +56,11 @@ This list shows the ideas we had and don't want to forget.
 
 <tr>
 <td>More than two keyboard inputs</td>
-<td>0 %</td>
-<td>Noticed</td>
-<td>Since you can plug many USB keyboards, it could be possible to have five human players in the same game. So allow Keyboard 3 to Keyboard 5 in the input selection screen.</td>
+<td>99 %</td>
+<td>In Progress</td>
+<td>Since you can plug many USB keyboards, it could be possible to have five human players in the same game. So allow Keyboard 3 to Keyboard 5 in the input selection screen.<br />Almost done. Configuration should be stored in XML prior to release. Tracker item <a href="https://sourceforge.net/tracker/index.php?func=detail&amp;aid=2150405&amp;group_id=81520&amp;atid=563213">2150405</a> opened.</td>
 <td>2007-12-10</td>
-<td>2007-12-10</td>
+<td>2008-10-07</td>
 </tr>
 
 <tr>
