@@ -12,6 +12,7 @@ Changed: F1 and F2 keys don't switch to fullscreen mode in 32-pixels version sin
 Changed: Configuration file stored in XML format ##### STILL IN PROGRESS #####
 Changed: Bots "know" which bomb is ignited by another bomb.
 Changed: Algorithm for bots choosing the best block to escape / defend theirselves.
+Changed: Keyboard 3 to 5 as human input available now. Useful if you don't have joysticks (#2150405). #### Delete config.dat file first, otherwise the new keys aren't preset ####
 Bug fix: Input field was empty / executable crashed when joystick isn't present the next game start (#2121904, revision 538, revision 539, revision 546).
 Bug fix: Bots are escaping in a certain situation if a player surrounds a bot with bombs.
 Bug fix: Sometimes bots were stuck in the "WALK MODE". If they stay in there too often, they exit the "WALK MODE".
